--- a/src/styles.css
+++ b/src/styles.css
@@ -4,8 +4,11 @@
 nav {
     display: flex;
     justify-content: space-around;
-    padding: 8px;
+    padding-top: 40px;
     width: 100%;
     margin: auto;
     color:black;
+}
+.logo {
+    margin-left: 15px;
 }
