--- a/src/styles.css
+++ b/src/styles.css
@@ -4,11 +4,9 @@
 nav {
     display: flex;
     justify-content: space-around;
-    padding-top: 40px;
+    padding-top: 50px;
     width: 100%;
     margin: auto;
     color:black;
-}
-.logo {
-    margin-left: 15px;
+    background-color: #FCFFF7;
 }
