--- a/src/pages/Ideas.css
+++ b/src/pages/Ideas.css
@@ -1,12 +1,73 @@
-.ideas-flex-container {
+* {
+    box-sizing: border-box;
+}
+
+/* body {
+    background-color: #ffeb00;
+} */
+
+body {
+    background-color: #FCFFF7;
+}
+
+.ideas-flex-grid {
     display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    max-width: 1500px;
 }
 
-.idea-container {        
-    flex-flow: row wrap;
-    background-color: lightseagreen;
+.idea-container {
+    flex: 1;
+    background-color:rgb(207, 207, 207);
+    box-shadow: 10px 10px 10px #2A3439;
+    margin: 1.5rem;
+    border-radius: 1.2rem;
+    padding: 1rem;
+    border: 4px solid #2a3439;
+    
 }
-
+.idea-title {
+    font-size: 1.5rem;
+    padding: 1rem;
+}
 .idea-image {
-    height: 400px;    
+    max-width: 375px; 
+    border-radius: 1.2rem;
+    /* box-shadow: 10px 10px 5px #2A3439; */
+}
+
+.button {
+    align-self: flex-end;
+    background-color: #2a3439;
+    color: #1f75fe;
+    font-size: 1.5rem;
+    padding: .6rem;
+    border-radius: 30px;
+}
+@media (max-width: 960px) {
+    .idea-image {
+        max-width: 300px;
+    }
+}
+
+@media (max-width: 775px) {
+    .idea-image {
+        max-width: 250px;
+    }
+}
+
+@media (max-width: 675px) {
+    .ideas-flex-grid {
+        display: block;
+    }
+
+    .idea-container {
+        display: block;
+        margin: 0, 0, 10px, 0;
+    }
+
+    .idea-image {
+        max-width: 300px;
+    }
 }
