--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
 }
 body {
     background-image: url('https://i.ibb.co/fQx7Qpr/shutterstock-1924269197.png');
+    background-color: #ffffff;
     background-repeat: no-repeat;
     background-size: 80%;
     background-position: 80px 260px;
