--- a/src/styles.css
+++ b/src/styles.css
@@ -2,13 +2,12 @@
     margin:0 auto;
 }
 body {
-    background-image: url('https://i.ibb.co/fQx7Qpr/shutterstock-1924269197.png');
-    background-color: #ffffff;
-    background-repeat: no-repeat;
-    background-size: 80%;
-    background-position: 80px 260px;
+    margin:0;
+    min-height: calc(100vh - 80px);
 }
-
+.background-image {
+height:400px;
+}
 nav {
     display: flex;
     justify-content: space-around;
@@ -23,7 +22,7 @@ nav {
     display: flex;
     justify-content: center;
     margin-top: 20px;
-    font-size: 100px;
+    font-size: 80px;
     -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
     line-height: 0.70em;
     outline: none;
@@ -31,7 +30,7 @@ nav {
 }
 
 .project {
-    font-size: 100px;
+    font-size: 90px;
     margin-top: 20px;
     -webkit-box-reflect: below 1px linear-gradient(transparent, #0004);
     line-height: 0.70em;
@@ -55,6 +54,9 @@ nav {
 
     }
 }
+
+
+
 
 
 
