--- a/src/styles.css
+++ b/src/styles.css
@@ -3,11 +3,17 @@
 }
 body {
     margin:0;
-    min-height: calc(100vh - 80px);
 }
 .background-image {
-height:400px;
+height:500px;
+margin-left: -30px;
+
 }
+.background-image2 {
+    height:500px;
+    margin-left: -250px;
+    
+    }
 nav {
     display: flex;
     justify-content: space-around;
