--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,11 @@
+* {
+  
+  font-family: 'Roboto', sans-serif;
 
+ 
+  
+                                                
+}
 
 .App {
   text-align: center;
