--- a/src/footer.css
+++ b/src/footer.css
@@ -1,13 +1,20 @@
 .footer {
+  padding:1rem;
   display: flex;
-  justify-content: center;
-  margin-bottom: 0px;
+  flex-direction: column;
+  flex-wrap: wrap;
+  align-content: flex-start;
+  /* margin-bottom: 0px; */
   font-weight: bold;
-  bottom: 0;
-  position: relative;
+  /* bottom: 0; */
+  /* position: relative;
   width: 100%;
-  height: 30px;
+  height: 30px; */
   background-color: transparent;
+}
+.github-f{
+  display: flex;
+  align-items: center;
 }
 
 
@@ -15,7 +22,7 @@
 .github-logo {
   width: 25px;
   height: 25px;
-  margin-left: 500px;
+  /* margin-left: 500px; */
   
   
 }
@@ -24,7 +31,7 @@
   margin: 0px 4px 0px 15px; */
   width: 25px;
   height: 25px;
-  margin-right:500px
+  /* margin-right:500px */
 }
 
 .frontend {
@@ -32,13 +39,15 @@
   margin: 0px 4px 0px 10px; */
   color:#1F75FE;
   font-size: x-small;
-  margin-left: 500px;
+  margin: 10px;
+  /* margin-left: 500px; */
 }
 .backend {
   /* display: flex; */
   color:#1F75FE;
   font-size: x-small;
-  margin-right:500px
+  margin: 10px;
+  /* margin-right:500px */
   /* margin: 0px 4px 0px 10px; */
 }
 
