--- a/src/footer.css
+++ b/src/footer.css
@@ -4,12 +4,11 @@
   flex-direction: column;
   flex-wrap: wrap;
   align-content: flex-start;
-  /* margin-bottom: 0px; */
+  margin-bottom: 0px;
   font-weight: bold;
-  /* bottom: 0; */
-  /* position: relative;
+  bottom: 0;
+  position: fixed;
   width: 100%;
-  height: 30px; */
   background-color: transparent;
 }
 .github-f{
